--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayoutId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountPage">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/home_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <include layout="@layout/account_content"/>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navViewId"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/home_nav_header"
+        app:menu="@menu/home_menu" />
+
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
