--- a/app/src/main/res/layout/home_content.xml
+++ b/app/src/main/res/layout/home_content.xml
@@ -9,6 +9,7 @@
     tools:showIn="@layout/home_toolbar">
 
     <TextView
+        android:id="@+id/helloUserId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home Page"
