--- a/app/src/main/res/layout/home_nav_header.xml
+++ b/app/src/main/res/layout/home_nav_header.xml
@@ -10,30 +10,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/navViewId"
    >
 
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="98dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/av3"
+        android:layout_gravity="center"/>
 
 
     <TextView
+        android:id="@+id/emailNavBarId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Avocado App"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="User@Email.com"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAlignment="center"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="users@email.com" />
 
 
 </LinearLayout>
