--- a/app/src/main/res/layout/account_content.xml
+++ b/app/src/main/res/layout/account_content.xml
@@ -20,7 +20,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -152,8 +152,17 @@
         />
 
     <CalendarView
+        android:id="@+id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></CalendarView>
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"></CalendarView>
+
+    <Button
+        android:id="@+id/btnSaveDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="save date"
+        />
 
 
 
