--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,55 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back"
-    tools:context=".ProfilePage">
+    android:background="@drawable/back2"
 
-    <EditText
-        android:id="@+id/enteruserId"
+    tools:context="com.example.avocado1.ProfilePage">
+
+    <LinearLayout
         android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="40dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="enter username"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.314" />
+        android:id="@+id/linearLayout">
 
-    <Button
-        android:id="@+id/seeemailId"
-        android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_marginTop="5sp"
+            android:id="@+id/edit_profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="   Edit profile"
+            android:textSize="10sp"/>
+
+
+
+
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="press to see email"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
 
-    <EditText
-        android:id="@+id/showemailId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="510dp" />
+        android:layout_marginBottom="236dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/playNow"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="7dp"
+            android:background="@drawable/genre_horror"
+            android:text="Horror"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/yourStats"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginBottom="7dp"
+            android:layout_toRightOf="@id/playNow"
+            android:background="@drawable/genre_action"
+            android:text="Stats"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/leaderboard"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_below="@id/yourStats"
+            android:layout_marginLeft="7dp"
+            android:layout_toRightOf="@+id/settings"
+            android:background="@drawable/genre_comedy"
+            android:text="Leader Board"
+            android:textAllCaps="false" />
+
+
+        <Button
+            android:id="@+id/settings"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_below="@id/playNow"
+            android:layout_marginLeft="40dp"
+            android:background="@drawable/genre_drama"
+            android:text="Settings"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/settings1"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_below="@id/playNow"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="120dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/genre_scifi"
+            android:text="Settings"
+            android:textAllCaps="false" />
+
+
+    </RelativeLayout>
+
+
+
+
+
+</RelativeLayout>
